--- a/frontend/items/Boopathi/login.css
+++ b/frontend/items/Boopathi/login.css
@@ -1,6 +1,6 @@
 body{
     height: 100vh;
-    background-color: aqua;
+    background-color:white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,6 +13,8 @@ body{
         background-color:white;
         flex-direction: row;
         flex-wrap: nowrap;
+        border-radius: 15px;
+        box-shadow: 4px 4px 4px 6px rgba(0, 0, 0, 0.399);
 
 }
 .login_image{
@@ -22,7 +24,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 0px 250px 250px 0px;
+    border-radius: 5px 250px 250px 5px;
 }
 .login_image img{
     width: 60%;
@@ -37,7 +39,7 @@ body{
     flex-wrap: nowrap;
     row-gap: 10px;
     margin-left: 40px;
-   
+    border-radius: 0px 5px 5px 0px;
     justify-content: center;
 
 }
@@ -47,8 +49,9 @@ body{
 }
 .login_content input{
     width: 80%;
-    margin-top: 10px;
+    margin-bottom: 20px;
     height: 6%;
+    padding-left: 10px;
     border-radius: 2px;
     border: 1px solid #FA1041;
 }
@@ -76,5 +79,5 @@ body{
 .login_content p span a{
     text-decoration: none;
     font-weight: bold;
-    
+
 }
