--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -20,16 +20,16 @@ a {
 }
 a:hover {
   color: #535bf2;
-}
+}*/
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
-
+} */
+/*
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -65,4 +65,17 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+#root{
+  margin: 0; 
+  padding: 0;
+  /* box-sizing: border-box;*/
+  max-width: none;
+  width: 100%;
+}
+
+body{
+  margin: 0;
+  padding: 0;
 }
