--- a/frontend/src/card.css
+++ b/frontend/src/card.css
@@ -15,7 +15,7 @@ body{
 .image_cart{
     height: 300px;
     width: 100%;
-    background-image: url("card2.jpeg");
+    /* background-image: url("card2.jpeg"); */
     background-position:bottom;
     background-size: cover;
     
