--- a/frontend/items/Boopathi/offer.css
+++ b/frontend/items/Boopathi/offer.css
@@ -10,12 +10,13 @@ h2{
     margin: 25px;
     color: #FA1041;
 }
-main{
+.main{
     margin-top: 10px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     height: 25%;
+    width:100%;
     justify-content: space-evenly;
     align-items: center;
 }
