--- a/frontend/src/HomeScreen/footer.css
+++ b/frontend/src/HomeScreen/footer.css
@@ -1,7 +1,7 @@
 .footer_bar{
     background-color:#FA1041;
     width: 100%;
-    height: 50%;
+    height: 90%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -9,6 +9,7 @@
 }
 .footerDiv{
     width: 100%;
+    height: 500px;
 }
 .footer_left_side{
     width: 50%;
@@ -18,7 +19,7 @@
     align-items: center;
     justify-content: center;
 }
-.footer_left_side img{
+.footer_left_side>img{
     width: 70%;
     height: 150%;
 }
@@ -34,7 +35,7 @@
     flex-direction: row;
     justify-content: center;
 }
-.footer_right_side img{
+.footer_right_side>img{
     width:40%;
     height: 100%;
     margin-left: 7%;
