--- a/frontend/src/SignUp.css
+++ b/frontend/src/SignUp.css
@@ -53,7 +53,8 @@
 }
 .signup_page_content button{
     width:40%;
-    height: 30px;
+    height: 40%;
+    padding: 10px;
     margin-top: 10px;
     margin-left:16%;
     border: none;
