rectified the about us

--- a/frontend/src/SignUp.css
+++ b/frontend/src/SignUp.css
@@ -9,7 +9,7 @@
     border-radius: 5px;
     justify-content: center;
     box-shadow: 4px 4px 4px 6px rgba(0, 0, 0, 0.337);
-    margin: 20px; 
+    margin: 10% ; 
 
 }
 .signup_page_image{
