--- a/frontend/src/HomeScreen/footer.css
+++ b/frontend/src/HomeScreen/footer.css
@@ -1,7 +1,7 @@
 .footer_bar {
     background-color: #FA1041;
     width: 100%;
-    height: 50%;
+    height: 350px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -33,7 +33,6 @@
     border-radius: 100px 0 0 100px;
     display: flex;
     flex-direction: column;
-    display: flex;
     align-items: center;
     flex-direction: row;
     justify-content: center;
@@ -86,6 +85,7 @@
     border: 1px solid #FA1041;
     padding: 2px 2px;
     border-radius: 5px;
+    margin-right: 10px;
     overflow: hidden;
     display: flex;
 }
@@ -106,7 +106,7 @@
 }
 
 .footer_feedback_star button {
-    margin-left: 30px;
+    margin-left: 20px;
     padding: 7px 30px;
     border: none;
     background-color: #FA1041;
