--- a/frontend/src/about.css
+++ b/frontend/src/about.css
@@ -25,8 +25,8 @@
 
 .about-text-section {
     color: rgb(243, 237, 237);
-    padding-left: 20px;
-    margin-left: 20px;
+    /* padding-left: 20px; 
+     margin-left: 20px; */
     flex: 2;
     min-width: 300px;
 }
@@ -40,7 +40,7 @@
 
 .about-text-section p {
     margin-top: 40px;
-    margin-left: 50px;
+    margin-left: 0px;
     font-size: 1.2em;
     margin-bottom: 20px;
     line-height: 25px;
@@ -65,35 +65,16 @@
     background-color: #ff6f6f;
 }
 
-@media (max-width: 768px) {
-    .about-container {
-        flex-direction: column; 
-        padding: 20px;
+ @media (max-width:809px) {
+    .about-image-section{
+        display: none;
+    }
+    .about-text-section{
+        margin:0px;
+        padding: 0px;
+    }
+    .about-text-section button{
+        margin-left: 5%;
     }
 
-    .about-image-section {
-        margin: 0 auto;
-        width: 100%; 
-        max-width: 300px;
-    }
-    .about-text-section {
-        margin-left: 0;
-        padding-left: 0;
-        text-align: center; 
-    }
-
-    .about-text-section button {
-        margin-left: 0;
-        margin-top: 30px; 
-    }
-
-    .about-text-section p {
-        margin-left: 0;
-        font-size: 1.2em; 
-    }
-
-    .about-text-section h2 {
-        margin-top: 20px;
-        font-size: 1.8em; 
-    }
-}
+} 
