--- a/frontend/src/login.css
+++ b/frontend/src/login.css
@@ -1,7 +1,7 @@
 
 .login{
         display: flex;
-        margin: 20px;
+        margin: 10%;
         width: 80%;
         height: 80%;
         background-color:white;
