--- a/frontend/src/HomeScreen/card.css
+++ b/frontend/src/HomeScreen/card.css
@@ -6,6 +6,7 @@
     width: 300px;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.511);
     border-radius: 10px;
+    padding: 0px;
 }
 
 .image_card {
@@ -81,6 +82,7 @@
     justify-content: space-evenly;
     width: 100%;
     max-width: none;
+    /* flex-wrap: wrap; */
 }
 
 .spinner {
