--- a/frontend/src/about.css
+++ b/frontend/src/about.css
@@ -4,6 +4,7 @@
     justify-content: center;
     padding: 50px;
     background-color: #fa1041;
+    font-family: "Inter", serif;
     flex-wrap: wrap; 
 }
 
@@ -27,6 +28,7 @@
     color: rgb(243, 237, 237);
     /* padding-left: 20px; 
      margin-left: 20px; */
+     font-family: "Inter", serif;
     flex: 2;
     min-width: 300px;
 }
@@ -41,6 +43,7 @@
 .about-text-section p {
     margin-top: 40px;
     margin-left: 0px;
+    font-family: "Inter", serif;
     font-size: 1.2em;
     margin-bottom: 20px;
     line-height: 25px;
