--- a/frontend/src/HomeScreen/HomeScreenOffers.css
+++ b/frontend/src/HomeScreen/HomeScreenOffers.css
@@ -1,18 +1,19 @@
 .offer-section {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 15px;
-    flex-wrap: wrap;
+    overflow: auto;
+    height: 240px;
+    white-space: nowrap;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 .offer-item {
+    display: inline-block;
     width: 350px;
     height: 200px;
     border-radius: 15px;
     position: relative;
-    overflow: hidden;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    margin: 20px;
 }
 
 .offer-item img {
