--- a/frontend/src/HomeScreen/Header.css
+++ b/frontend/src/HomeScreen/Header.css
@@ -5,6 +5,27 @@
     align-items: center;
 
 }
+.user-info-container {
+  position: relative;
+  display: inline-block;
+}
+
+.logout-popup {
+  position: absolute;
+  top: 100%; /* below the user-info div */
+  right: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 10px 15px;
+  cursor: pointer;
+  z-index: 10;
+  box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
+  border-radius: 5px;
+}
+
+.logout-popup:hover {
+  background-color: #f5f5f5;
+}
 
 
 .header-left {
